--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "ecommerce-product-page",
-  "homepage": "http://matheusg18.github.io/ecommerce-product-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,9 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -38,8 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
   }
 }
